crates/reinhardt-core/crates/macros/tests/ui/action/fail/missing_methods_syntax.rs
use reinhardt_macros::action;

struct ViewSet;

impl ViewSet {
	#[action(detail = true)]
	async fn missing_methods(&self) -> Result<(), ()> {
		Ok(())
	}
}

fn main() {}
